# novarche

./: 1.sql  Cargo.toml  README.md  test.rs
src/: lib.rs  main.rs
src/apis/: mod.rs
src/apis/accounts/: bank.rs  salary.rs
src/apis/admin/: authenticate.rs  authorities.rs  department.rs  login.rs  mod.rs  roles.rs  user.rs  user_roles.rs  user_signup.rs
src/apis/custom_types/: delivery_condition.rs  grades.rs  mod.rs
src/apis/cutting/: cutting.rs
src/apis/engineering/: part.rs
src/apis/human_resources/: department.rs  employee.rs  mod.rs  person.rs
src/apis/production/: cutting.rs  forging.rs  mod.rs  requisition.rs
src/apis/raw_material/: gate_entry.rs  grades.rs  mod.rs  section.rs  steel.rs
src/apis/rm_store/: gate_entry.rs  inventory.rs  mod.rs  party.rs
src/apis/utility_tools/: parse.rs
src/apis/utils/: check_table_exists.rs  gen_uuid.rs  mod.rs  mysql_commands.rs  parse.rs  row_parser.rs
src/backend/: mod.rs  read_buffer.rs  read_inputs.rs  todo.txt
src/frontend/: TODO.txt  dropdown.rs  home.rs  mod.rs  select.rs
src/frontend/admin/: authenticate.rs  authority.rs  mod.rs  roles.rs  user_signup.rs
src/frontend/engineering/: parts.rs
src/frontend/human_resources/: department.rs  employee.rs
src/frontend/production/: cutting.rs  forging.rs  mod.rs  requisition.rs
src/frontend/raw_material/: grades.rs  steel.rs
src/frontend/rm_store/: gate_entry.rs  inventory.rs  mod.rs  party.rs
src/utility_tools/: parse.rs
