[package]
name = "novarche"
version = "0.1.0"
authors = ["ankurhimanshu14 <52290008+ankurhimanshu14@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
serde_json = "1.0"
bcrypt = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }